--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
   "license": "UNLICENSED",
   "dependencies": {
     "file-saver": "^1.3.3",
-    "http-server": "^0.10.0"
+    "http-server": "^0.10.0",
+    "tracking": "^1.1.3"
   },
   "devDependencies": {
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "babel-core": "^6.26.0",
-    "webpack": "^3.10.0"
+    "babel-loader": "^8.1.0",
+    "babel-preset-env": "^1.6.1",
+    "core-js": "^3.6.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
