--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server dist",
+    "start": "node server/index.js",
     "watch": "http-server dist & webpack -w -d",
     "build": "webpack -p",
-    "server": "http-server dist"
+    "server": "node server/index.js"
   },
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
     "file-saver": "^2.0.2",
-    "http-server": "^0.12.1",
     "tracking": "^1.1.3"
   },
   "devDependencies": {
@@ -25,6 +24,7 @@
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.6.1",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
